[package]
name = "serum-multisig"
version = "0.5.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_multisig"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

# patch Anchor 0.13 to be able to use Solana 1.9.28
[patch.crates-io]
anchor-lang = { git = "https://github.com/lidofinance/anchor", branch = "solana-v1.9.28" }

[dependencies]
anchor-lang = "0.13.0"